--- a/views/set/user/info.html
+++ b/views/set/user/info.html
@@ -16,94 +16,133 @@
   <div class="layui-fluid">
     <div class="layui-row layui-col-space15">
       <div class="layui-col-md12">
-        <div class="layui-card">
-          <div class="layui-card-header">设置我的资料</div>
-          <div class="layui-card-body" pad15>
-            
-            <div class="layui-form" lay-filter="">
-              <div class="layui-form-item">
-                <label class="layui-form-label">我的角色</label>
-                <div class="layui-input-inline">
-                  <select name="role" lay-verify="">
-                    <option value="1" selected>超级管理员</option>
-                    <option value="2" disabled>普通管理员</option>
-                    <option value="3" disabled>审核员</option>
-                    <option value="4" disabled>编辑人员</option>
-                  </select> 
+        <form class="layui-form" action="" lay-filter="component-form-group">
+          <div class="layui-card">
+            <div class="layui-card-header">设置我的资料</div>
+            <div class="layui-card-body" pad15>
+
+              <div class="layui-form" lay-filter="">
+                <div class="layui-form-item">
+                  <label class="layui-form-label">员工ID</label>
+                  <div class="layui-input-inline">
+                    <input type="text" name="loginName" value="" lay-verify="required" autocomplete="off" placeholder="请输入昵称" class="layui-input" readonly>
+                  </div>
+                  <div class="layui-form-mid layui-word-aux">不可修改。一般用于后台登入名</div>
                 </div>
-                <div class="layui-form-mid layui-word-aux">当前角色不可更改为其它角色</div>
-              </div>
-              <div class="layui-form-item">
-                <label class="layui-form-label">用户名</label>
-                <div class="layui-input-inline">
-                  <input type="text" name="username" value="xianxin" readonly class="layui-input">
+                <div class="layui-form-item">
+                  <label class="layui-form-label">姓名</label>
+                  <div class="layui-input-inline">
+                    <input type="hidden" name="id" value="" lay-verify="required" readonly class="layui-input">
+                    <input type="text" name="realName" value="" lay-verify="required" class="layui-input">
+                  </div>
                 </div>
-                <div class="layui-form-mid layui-word-aux">不可修改。一般用于后台登入名</div>
-              </div>
-              <div class="layui-form-item">
-                <label class="layui-form-label">昵称</label>
-                <div class="layui-input-inline">
-                  <input type="text" name="nickname" value="贤心" lay-verify="nickname" autocomplete="off" placeholder="请输入昵称" class="layui-input">
+                <div class="layui-form-item">
+                  <label class="layui-form-label">性别</label>
+                  <div class="layui-input-block">
+                    <input type="radio" name="sex" value="1" title="男">
+                    <input type="radio" name="sex" value="2" title="女">
+                    <input type="radio" name="sex" value="0" title="保密">
+                  </div>
                 </div>
-              </div>
-              <div class="layui-form-item">
-                <label class="layui-form-label">性别</label>
-                <div class="layui-input-block">
-                  <input type="radio" name="sex" value="男" title="男">
-                  <input type="radio" name="sex" value="女" title="女" checked>
+                <div class="layui-form-item">
+                  <label class="layui-form-label">手机</label>
+                  <div class="layui-input-inline">
+                    <input type="text" name="phone" value="" lay-verify="phone" autocomplete="off" class="layui-input">
+                  </div>
                 </div>
-              </div>
-              <div class="layui-form-item">
-                <label class="layui-form-label">头像</label>
-                <div class="layui-input-inline">
-                  <input name="avatar" lay-verify="required" id="LAY_avatarSrc" placeholder="图片地址" value="http://cdn.layui.com/avatar/168.jpg" class="layui-input">
+                <div class="layui-form-item">
+                  <label class="layui-form-label">邮箱</label>
+                  <div class="layui-input-inline">
+                    <input type="text" name="email" value="" lay-verify="email" autocomplete="off" class="layui-input">
+                  </div>
                 </div>
-                <div class="layui-input-inline layui-btn-container" style="width: auto;">
-                  <button type="button" class="layui-btn layui-btn-primary" id="LAY_avatarUpload">
-                    <i class="layui-icon">&#xe67c;</i>上传图片
-                  </button>
-                  <button class="layui-btn layui-btn-primary" layadmin-event="avartatPreview">查看图片</button >
+                <div class="layui-form-item layui-form-text">
+                  <label class="layui-form-label">备注</label>
+                  <div class="layui-input-block">
+                    <textarea name="remarks" placeholder="请输入内容" class="layui-textarea"></textarea>
+                  </div>
                 </div>
-             </div>
-              <div class="layui-form-item">
-                <label class="layui-form-label">手机</label>
-                <div class="layui-input-inline">
-                  <input type="text" name="cellphone" value="" lay-verify="phone" autocomplete="off" class="layui-input">
+                <div class="layui-form-item">
+                  <div class="layui-input-block">
+                    <button class="layui-btn" lay-submit lay-filter="setmyinfo">确认修改</button>
+                  </div>
                 </div>
               </div>
-              <div class="layui-form-item">
-                <label class="layui-form-label">邮箱</label>
-                <div class="layui-input-inline">
-                  <input type="text" name="email" value="" lay-verify="email" autocomplete="off" class="layui-input">
-                </div>
-              </div>
-              <div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">备注</label>
-                <div class="layui-input-block">
-                  <textarea name="remarks" placeholder="请输入内容" class="layui-textarea"></textarea>
-                </div>
-              </div>
-              <div class="layui-form-item">
-                <div class="layui-input-block">
-                  <button class="layui-btn" lay-submit lay-filter="setmyinfo">确认修改</button>
-                  <button type="reset" class="layui-btn layui-btn-primary">重新填写</button>
-                </div>
-              </div>
+
             </div>
-            
           </div>
-        </div>
+        </form>
       </div>
     </div>
   </div>
 
-  <script src="../../../layuiadmin/layui/layui.js"></script>  
+  <script src="../../../layuiadmin/layui/layui.js"></script>
+  <script src="../../../layuiadmin/commons.js"></script>
   <script>
   layui.config({
     base: '../../../layuiadmin/' //静态资源所在路径
   }).extend({
     index: 'lib/index' //主入口模块
-  }).use(['index', 'set']);
+  }).use(['index', 'form'], function () {
+      var $ = layui.$
+          ,form = layui.form;
+
+
+      $.ajax({
+          type: 'GET',
+          contentType: "application/json;",
+          url: domain + "api/user/getUserBySelf",
+          success: function(result){
+              if(result.code == 0){
+                var data = result.data;
+                $("input[name='id']").val(data.id);
+                $("input[name='loginName']").val(data.loginName);
+                $("input[name='realName']").val(data.realName);
+                $("input[type='radio'][name='sex'][value='1']").attr("checked", "checked");
+                $("input[name='phone']").val(data.phone);
+                $("input[name='email']").val(data.email);
+                $("textarea[name='remarks']").text(data.remarks);
+                form.render('radio');
+              } else {
+                  layer.alert(result.msg);
+              }
+          },
+          error: function () {
+              console.log("网络错误！");
+          }
+      });
+
+      form.render(null, 'component-form-group');
+      /* 监听指定开关 */
+      /*form.on('switch(component-form-switchTest)', function (data) {
+          layer.msg('开关checked：' + (this.checked ? 'true' : 'false'), {
+              offset: '6px'
+          });
+          layer.tips('温馨提示：请注意开关状态的文字可以随意定义，而不仅仅是ON|OFF', data.othis)
+      });*/
+
+      /* 监听提交 */
+      form.on('submit(setmyinfo)', function (data) {
+          data.field.sex = parseInt(data.field.sex);
+          $.ajax({
+              type: 'POST',
+              contentType: "application/json;",
+              url: domain + "api/user/updateUser",
+              data: JSON.stringify(data.field),
+              success: function (result) {
+                  if (result.code == 0) {
+                      layer.msg(result.msg);
+                  } else {
+                      layer.alert(result.msg);
+                  }
+              },
+              error: function () {
+                  console.log("网络错误！");
+              }
+          });
+          return false;
+      });
+  });
   </script>
 </body>
 </html>
