--- a/views/system/role-list.html
+++ b/views/system/role-list.html
@@ -81,7 +81,7 @@
       ]]
 	  ,id: 'roleTable'
       ,page: true
-      ,height: 1000
+        ,height: 'full-100'
     });
 
     element.render();
