--- a/views/system/user-list.html
+++ b/views/system/user-list.html
@@ -87,7 +87,7 @@
             ]]
             , id: 'userTable'
             , page: true
-            , height: 600
+            ,height: 'full-100'
         });
 
         element.render();
