--- a/views/business/order-proofing.html
+++ b/views/business/order-proofing.html
@@ -67,8 +67,8 @@
                 <div class="layui-form-item layui-layout-admin">
                     <div class="layui-input-block">
                         <div class="layui-footer" style="left: 0;">
-                            <button class="layui-btn" lay-submit="" lay-filter="component-form-demo1">立即提交</button>
-                            <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                            <button class="layui-btn" lay-submit="" lay-filter="component-form-demo1">立即保存</button>
+                            <button type="button" class="layui-btn layui-btn-primary">提交</button>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
         $.ajax({
             type: 'GET',
             //contentType: "application/json;",
-            url: domain + "api/simple/findSample/" + GetQueryString("orderId"),
+            url: domain + "api/sample/findSample/" + GetQueryString("orderId"),
             success: function (result) {
                 if (result.code == 0) {
                     var data = result.data;
@@ -134,6 +134,29 @@
             error: function () {
                 console.log("网络错误！");
             }
+        });
+
+        $(".layui-btn-primary").click(function () {
+            layer.confirm('提交之后进入计划科将不可修改，确认提交？', function (index) {
+                $.ajax({
+                    type: 'POST',
+                    contentType: "application/json;",
+                    url: domain + "api/sample/updateFinish/" + $("input[name='id']").val(),
+                    success: function (result) {
+                        if (result.code == 0) {
+                            layer.msg(result.msg);
+                            var index = parent.layer.getFrameIndex(window.name);
+                            parent.layui.table.reload('orderTable');
+                            parent.layer.close(index);
+                        } else {
+                            layer.alert(result.msg);
+                        }
+                    },
+                    error: function () {
+                        console.log("网络错误！");
+                    }
+                });
+            });
         });
 
         //构建一个默认的编辑器
@@ -187,7 +210,7 @@
             $.ajax({
                 type: 'POST',
                 contentType: "application/x-www-form-urlencoded; charset=UTF-8",
-                url: domain + "api/simple/insertSample",
+                url: domain + "api/sample/insertSample",
                 data: data.field,
                 success: function (result) {
                     if (result.code == 0) {
